# bevy-state-v3

./: CREDITS.md  Cargo.toml  README.md  TODO.md
bevy_state/: Cargo.toml  TODO.md
bevy_state/macros/: Cargo.toml
bevy_state/macros/src/: lib.rs
bevy_state/src/: commands.rs  data.rs  lib.rs  plugin.rs  state.rs  state_set.rs  transitions.rs  util.rs
bevy_state_v3/: Cargo.toml  PROPOSAL.md
bevy_state_v3/examples/: behavior_tree.rs  global_state.rs  local_state.rs  persistent_substate.rs  shifting_state.rs  simple_global_state.rs  simple_local_state.rs  state_hierarchy.rs  state_scoped_entities.rs  state_stack.rs  state_transitions.rs  substate.rs
bevy_state_v3/macros/: Cargo.toml
bevy_state_v3/macros/src/: lib.rs
bevy_state_v3/src/: app.rs  commands.rs  components.rs  config.rs  data.rs  lib.rs  scheduling.rs  state.rs  state_scoped.rs  state_set.rs  system_set.rs  transitions.rs  util.rs
examples/: simple_global_state.rs  state_hierarchy.rs
